@@ -426,8 +426,9 @@ module MotionModel
     end
 
     def call_hooks(hook_name, &block)
-      call_hook('before', hook_name)
-      block.call
+      result = call_hook('before', hook_name)
+      # returning false from a before_ hook stops the process
+      block.call if result !== false && block_given?
       call_hook('after', hook_name)
     end
 
