@@ -30,19 +30,23 @@ module MotionModel
     end
 
     def cast_to_array(arg)
-      arg.is_a?(Array) ? arg : arg.to_a
+      arg.is_a?(Array) ? Array(arg) : arg.to_a
+    end
+
+    def cast_to_string(arg)
+      String(arg)
     end
 
     def cast_to_type(column_name, arg) #nodoc
       return nil if arg.nil? && ![ :boolean, :bool ].include?(type(column_name))
 
       return case type(column_name)
-      when :string then arg.to_s
+      when :string then cast_to_string(arg)
       when :boolean, :bool then cast_to_bool(arg)
       when :int, :integer, :belongs_to_id then cast_to_integer(arg)
       when :float, :double then cast_to_float(arg)
       when :date then cast_to_date(arg)
-      when :text then arg.to_s
+      when :text then cast_to_string(arg)
       when :array then cast_to_array(arg)
       else
         raise ArgumentError.new("type #{column_name} : #{type(column_name)} is not possible to cast.")
