@@ -1,3 +1,3 @@
 module MotionModel
-  VERSION = "0.3.3"
+  VERSION = "0.3.4"
 end
